<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <parent>
       <groupId>cn.geoair.devkit</groupId>
        <artifactId>geoair-standard</artifactId>
        <version>J8.1.0-SNAPSHOT</version>
        <relativePath>../pom.xml</relativePath>
    </parent>

    <modelVersion>4.0.0</modelVersion>
   <groupId>cn.geoair.devkit</groupId>
    <artifactId>geoair-tools</artifactId>
    <version>J8.1.0-SNAPSHOT</version>
    <name>geoair-tools</name>
    <description>工具库</description>
    <packaging>jar</packaging>
    <properties>
        <java.version>8</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.build.timestamp.format>yyyy-MM-dd-HH-mm-ss</maven.build.timestamp.format>
        <skipTests>true</skipTests>
    </properties>

    <url>https://github.com/geoair-cn/geoair</url>

    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>zhangfengji</name>
            <email>1159856928@qq.com</email>
            <organization>geoair</organization>
            <organizationUrl>https://xmt.geoair.cn/</organizationUrl>
        </developer>
    </developers>

    <scm>
        <connection>scm:git://github.com/geoair-cn/geoair.git</connection>
        <developerConnection>scm:git:https://github.com:geoair-cn/geoair.git</developerConnection>
        <url>https://github.com/geoair-cn/geoair</url>
        <tag>HEAD</tag>
    </scm>
    <build>
        <pluginManagement>
            <plugins></plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.2.1</version>
                <configuration>
                    <attach>true</attach>
                </configuration>
                <executions>
                    <execution>
                        <phase>compile</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <parameters>true</parameters>
                    <!-- 源码版本 -->
                    <source>8</source>
                    <!-- 目标字节码版本 -->
                    <target>8</target>
                    <!-- 编码（可选，避免中文乱码） -->
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
        </plugins>
    </build>


</project>
